[metadata]
name = torch_utils
version = 0.0.1
author = Federico Di Marzo
author_email = federicodimarzo@protonmail.com
description = Collection of PyTorch utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FedericoDiMarzo/torch_utils

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    h5py
    tqdm
    pyyaml
    torch
    torchaudio
    tensorboard
    matplotlib
    pathimport
    soundfile
    numpy
    loguru

[options.packages.find]
where = .


[options.entry_points]
console_scripts =
    create_h5 = scripts.create_h5:main
    sample_h5 = scripts.sample_h5:main
    sample_online_dataset = scripts.sample_online_dataset:main
    torch_utils_run_tests = scripts.run_tests:main