[metadata]
name = torch_utilities
version = 0.0.1
author = Federico Di Marzo
author_email = federicodimarzo@protonmail.com
description = Simplifying audio and deep learning with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FedericoDiMarzo/torch_utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    h5py
    tqdm
    pdoc
    pyyaml
    torch
    torchaudio
    tensorboard
    multiprocess
    matplotlib
    pathimport
    soundfile
    ray[tune]
    resampy
    julius
    numpy
    loguru

[options.packages.find]
where = .


[options.entry_points]
console_scripts =
    create_h5 = scripts.create_h5:main
    sample_h5 = scripts.sample_h5:main
    sample_online_dataset = scripts.sample_online_dataset:main
