[metadata]
name = torch_utilities
version = 1.2.1
author = Federico Di Marzo
author_email = federicodimarzo@protonmail.com
description = Simplifying audio and deep learning with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FedericoDiMarzo/torch_utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    asteroid_filterbanks
    multiprocess
    onnxruntime
    torchaudio
    matplotlib
    soundfile
    resampy
    loguru
    torch
    numpy
    h5py
    tqdm
    pdoc

[options.extras_require]
dev =
    pytest
    build
    twine
    black
    pdoc

[options.packages.find]
where = .

[options.package_data]
torch_utilities = models/*